created suitable live and readiness endpoints
